--- a/styles/style.css
+++ b/styles/style.css
@@ -1,36 +1,73 @@
 /* poppins font from google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:wght@400;700;800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:wght@400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:wght@400;700;800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:wght@400;500;600;700;800&display=swap");
 /* This is shared styles */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-*{
-    font-family: "Poppins", sans-serif;
+* {
+  font-family: "Poppins", sans-serif;
 }
-header{
-    background: #F1E4FF;
-    padding: 85px 120px;
+header {
+  background: #f1e4ff;
+  padding: 85px 120px;
 }
-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-nav > ul{
-    display: flex;
+nav > ul {
+  display: flex;
 }
 nav li {
-    list-style: none;
-    margin-right: 34px;
-    font-size: 16px;
-    font-weight: 600;
+  list-style: none;
+  margin-right: 34px;
+  font-size: 16px;
+  font-weight: 600;
 }
-nav li a{
-    text-decoration: none;
+nav li a {
+  text-decoration: none;
+  color: #3a3a3a;
+}
+nav > ul img {
+  margin-right: 30px;
+}
+/* banner styles */
+.banner {
+  display: flex;
+  justify-content: space-between;
+}
+.banner-container {
+  max-width: 100%;
+  margin-top: 145px;
+}
+.banner-title {
+  color: #3a3a3a;
+  font-weight: 700;
+  font-size: 3.25rem;
+  margin-bottom: 10px;
+}
+.banner-description{
+    margin-bottom: 10px;
     color: #3A3A3A;
+    font-size: 1rem;
+    font-weight: 600;
+    margin-bottom: 26px;
 }
-nav > ul  img{
-    margin-right: 30px;
+.btn-primary {
+  border-radius: 41px;
+  background: #e02c6d;
+  border: 0;
+  display: inline-flex;
+  padding: 10px 24px;
+  align-items: flex-start;
+  gap: 8px;
+  color: #FFFFFF;
+}
+.banner img{
+    width:30%;
+    margin-top: 82px;
+    margin-left: 134px;
 }
