--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,11 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
+nav .section{
+     color: #3A3A3A;
+     font-size: 1.5rem;
+     font-weight: 700;
+}
 nav > ul {
   display: flex;
 }
@@ -69,5 +74,26 @@ nav > ul img {
 .banner img{
     width:30%;
     margin-top: 82px;
-    margin-left: 134px;
+    object-fit: cover;
+}
+
+
+/* Responsive for mobile devices */
+@media screen and (max-width:576px){
+    nav,nav > ul,.banner{
+        flex-direction: column;
+    }
+    header{
+        padding: 10px;
+    }
+    .banner img{
+        width: 100%;
+    }
+    nav > ul{
+        gap: 10px;
+    }
+    nav .section{
+        margin-bottom: 20px;
+    }
+    
 }
