--- a/styles/style.css
+++ b/styles/style.css
@@ -18,10 +18,10 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
-nav .section{
-     color: #3A3A3A;
-     font-size: 1.5rem;
-     font-weight: 700;
+nav .section {
+  color: #3a3a3a;
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 nav > ul {
   display: flex;
@@ -54,12 +54,12 @@ nav > ul img {
   font-size: 3.25rem;
   margin-bottom: 10px;
 }
-.banner-description{
-    margin-bottom: 10px;
-    color: #3A3A3A;
-    font-size: 1rem;
-    font-weight: 600;
-    margin-bottom: 26px;
+.banner-description {
+  margin-bottom: 10px;
+  color: #3a3a3a;
+  font-size: 1rem;
+  font-weight: 600;
+  margin-bottom: 26px;
 }
 .btn-primary {
   border-radius: 41px;
@@ -69,69 +69,133 @@ nav > ul img {
   padding: 10px 24px;
   align-items: flex-start;
   gap: 8px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
-.banner img{
-    width:30%;
-    margin-top: 82px;
-    object-fit: cover;
+.banner img {
+  width: 30%;
+  margin-top: 82px;
+  object-fit: cover;
 }
 
 /* sponsor section */
-.sponsor{
-    width: 77%;
-    margin: 50px auto;
-    text-align: center;
+.sponsor {
+  width: 77%;
+  margin: 50px auto;
+  text-align: center;
 }
-.sponsors-img-container img{
-    margin-right: 62px;
+.sponsors-img-container img {
+  margin-right: 62px;
+}
+/* feature section */
+.feature {
+  width: 73%;
+  margin: 0 auto;
+}
+.feature-title {
+  color: #3a3a3a;
+  font-size: 1.75rem;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
-
+.feature-card-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.feature-card-container .card {
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+.feature-card-container .card .card-img img{
+    padding: 15px;
+    border-radius: 5px;
+    width: 100%;
+    object-fit: cover;
+}
+.feature-card-container .card h4{
+    text-align: left;
+    margin-left: 14px;
+    font-size: 1.75rem;
+    color: #18191F;
+    font-weight: 500;
+}
+.feature-card-container .card h2{
+    text-align: left;
+    margin-left: 14px;
+    font-size: 1.5rem;
+    color: rgba(0, 0, 0, 0.87);
+    font-weight: 400;
+}
+.vector-sign .special{
+    margin-left: 5px;
+}
+.vector-sign{
+    text-align: left;
+    margin-left: 14px;
+}
+.vector-sign p{
+    text-align: left;
+    margin-bottom: 17px;
+}
 
 /* Responsive for mobile devices */
-@media screen and (max-width:576px){
-    nav,nav > ul{
-        flex-direction: column;
-    }
-    .banner{
-        flex-direction: column-reverse;
-    }
-    header{
-        padding: 10px;
-    }
-    .banner img{
-        width: 100%;
-    }
-    nav > ul{
-        gap: 10px;
-    }
-    nav .section{
-        margin-bottom: 20px;
-    }
-    .sponsor {
-        width: 100%;
-    }
-    .sponsors-img-container img{
-        margin-right: 10px;
-    }
+@media screen and (max-width: 576px) {
+  nav,
+  nav > ul {
+    flex-direction: column;
+  }
+  .banner {
+    flex-direction: column-reverse;
+  }
+  header {
+    padding: 10px;
+  }
+  .banner img {
+    width: 100%;
+  }
+  nav > ul {
+    gap: 10px;
+  }
+  nav .section {
+    margin-bottom: 20px;
+  }
+  .sponsor {
+    width: 100%;
+  }
+  .sponsors-img-container img {
+    margin-right: 10px;
+  }
+  .feature-card-container{
+    grid-template-columns: repeat(1,1fr);
+  }
 }
 
 /* Responsive for medium devices */
-@media screen and (min-width:577px) and (max-width:960px) {
-    nav,nav > ul,.banner{
-        flex-direction: column;
-    }
-    .banner img{
-        width: 100%;
-    }
-    nav .section{
-        margin-bottom: 20px;
-    }
-    nav > ul{
-        gap: 10px;
-    }
-    .sponsors-img-container img{
-        margin-right: 36px;
-    }
+@media screen and (min-width: 577px) and (max-width: 960px) {
+  nav,
+  nav > ul,
+  .banner {
+    flex-direction: column;
+  }
+  .banner img {
+    width: 100%;
+  }
+  nav .section {
+    margin-bottom: 20px;
+  }
+  nav > ul {
+    gap: 10px;
+  }
+  .sponsors-img-container img {
+    margin-right: 36px;
+  }
+  .feature-card-container{
+    grid-template-columns: repeat(1,1fr);
+  }
 }
