--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,17 @@
 * {
   font-family: "Poppins", sans-serif;
 }
+.btn-primary {
+  border-radius: 41px;
+  background: #e02c6d;
+  border: 0;
+  display: inline-flex;
+  padding: 10px 24px;
+  align-items: flex-start;
+  gap: 8px;
+  color: #ffffff;
+}
+/* This is the header style */
 header {
   background: #f1e4ff;
   padding: 85px 120px;
@@ -61,16 +72,7 @@ nav > ul img {
   font-weight: 600;
   margin-bottom: 26px;
 }
-.btn-primary {
-  border-radius: 41px;
-  background: #e02c6d;
-  border: 0;
-  display: inline-flex;
-  padding: 10px 24px;
-  align-items: flex-start;
-  gap: 8px;
-  color: #ffffff;
-}
+
 .banner img {
   width: 30%;
   margin-top: 82px;
@@ -90,6 +92,12 @@ nav > ul img {
 .feature {
   width: 73%;
   margin: 0 auto;
+}
+.feature .see-more {
+  text-align: right;
+  color: rgba(224, 44, 109, 0.87);
+  font-weight: 700;
+  font-size: 1rem;
 }
 .feature-title {
   color: #3a3a3a;
@@ -112,36 +120,68 @@ nav > ul img {
   background: #fff;
   box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
 }
-.feature-card-container .card .card-img img{
-    padding: 15px;
-    border-radius: 5px;
-    width: 100%;
-    object-fit: cover;
+.feature-card-container .card .card-img img {
+  padding: 15px;
+  border-radius: 5px;
+  width: 100%;
+  object-fit: cover;
 }
-.feature-card-container .card h4{
-    text-align: left;
-    margin-left: 14px;
-    font-size: 1.75rem;
-    color: #18191F;
-    font-weight: 500;
+.feature-card-container .card h4 {
+  text-align: left;
+  margin-left: 14px;
+  font-size: 1.75rem;
+  color: #18191f;
+  font-weight: 500;
 }
-.feature-card-container .card h2{
-    text-align: left;
-    margin-left: 14px;
-    font-size: 1.5rem;
-    color: rgba(0, 0, 0, 0.87);
-    font-weight: 400;
+.feature-card-container .card h2 {
+  text-align: left;
+  margin-left: 14px;
+  font-size: 1.5rem;
+  color: rgba(0, 0, 0, 0.87);
+  font-weight: 400;
 }
-.vector-sign .special{
-    margin-left: 5px;
+.vector-sign .special {
+  margin-left: 5px;
 }
-.vector-sign{
-    text-align: left;
-    margin-left: 14px;
+.vector-sign {
+  text-align: left;
+  margin-left: 14px;
 }
-.vector-sign p{
-    text-align: left;
-    margin-bottom: 17px;
+.vector-sign p {
+  text-align: left;
+  margin-bottom: 17px;
+}
+
+/* Fact Section Styles */
+.fact-section {
+  width: 77%;
+  margin: 100px auto;
+  display: flex;
+  gap: 100px;
+  align-items: center;
+}
+.fact-section-description h1 {
+  color: #0a0826;
+  font-size: 2.375rem;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.fact-section-description p {
+  color: #6c6c6c;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.fact-section-description h5 {
+  display: inline-flex;
+  padding: 10px 24px;
+  align-items: flex-start;
+  gap: 8px;
+  background: #2716be9a;
+  color: #FFF;
+  font-weight: 700;
+}
+.fact-section-description h5 .sign{
+    margin-top: 2px;
 }
 
 /* Responsive for mobile devices */
@@ -150,7 +190,7 @@ nav > ul img {
   nav > ul {
     flex-direction: column;
   }
-  .banner {
+  .banner,.fact-section  {
     flex-direction: column-reverse;
   }
   header {
@@ -171,8 +211,12 @@ nav > ul img {
   .sponsors-img-container img {
     margin-right: 10px;
   }
-  .feature-card-container{
-    grid-template-columns: repeat(1,1fr);
+  .feature-card-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .fact-section{
+    margin: 100px 0;
+    padding: 50px;
   }
 }
 
@@ -195,7 +239,7 @@ nav > ul img {
   .sponsors-img-container img {
     margin-right: 36px;
   }
-  .feature-card-container{
-    grid-template-columns: repeat(1,1fr);
+  .feature-card-container {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
